# distro-tools

./: .bazelrc  .dockerignore  .env  .gitignore  .pylintrc  .style.yapf  .yapfignore  BUILD.bazel  CONTRIBUTORS  COPYRIGHT  LICENSE  README.md  WORKSPACE  gazelle_python.yaml  package.json  pnpm-lock.yaml  requirements.txt  requirements_lock.txt
.github/workflows/: push_containers.yaml  test.yaml  web.yaml
apollo/: BUILD.bazel  README.md  schema.sql
apollo/cveindexer/: BUILD.bazel  __main__.py  temporal.py
apollo/db/: BUILD.bazel  __init__.py  advisory.py
apollo/db/serialize/: BUILD.bazel  __init__.py
apollo/db_seed/: codes.csv  supported_products.csv  supported_products_rh_mirrors.csv  supported_products_rpm_repomds.csv
apollo/migrations/: 20230128201227_init.sql  20250825165713_add_api_keys.sql  20251104111759_add_mirror_active_field.sql
apollo/osv-gcs-exporter/: __main__.py
apollo/publishing_tools/: apollo_tree.py
apollo/rhcsaf/: BUILD.bazel  __init__.py
apollo/rherrata/: BUILD.bazel  __init__.py  example.py
apollo/rhwebscraper/: BUILD.bazel  __init__.py  example.py
apollo/rhworker/: BUILD.bazel  Dockerfile  __main__.py  poll_rh_activities.py  poll_rh_workflow.py  temporal.py
apollo/rpm_helpers/: BUILD.bazel  __init__.py
apollo/rpmworker/: BUILD.bazel  Dockerfile  __main__.py  repomd.py  rh_matcher_activities.py  rh_matcher_workflows.py  rocky_linux.sql  rocky_linux_older.sql  temporal.py
apollo/server/: BUILD.bazel  Dockerfile  auth.py  roles.py  server.py  settings.py  utils.py  validation.py
apollo/server/models/: workflow.py
apollo/server/routes/: admin_api_keys.py  admin_index.py  admin_supported_products.py  admin_users.py  admin_workflows.py  advisories.py  api_advisories.py  api_compat.py  api_keys.py  api_osv.py  api_red_hat.py  api_updateinfo.py  api_workflows.py  login.py  logout.py  profile.py  red_hat_advisories.py  statistics.py
apollo/server/services/: database_service.py  workflow_service.py
apollo/server/static/: BUILD.bazel  esbuild.config.mjs  index.ts  theme.scss
apollo/server/templates/: admin_api_key_new.jinja  admin_api_keys.jinja  admin_index.jinja  admin_layout.jinja  admin_supported_product.jinja  admin_supported_product_block_new.jinja  admin_supported_product_mirror.jinja  admin_supported_product_mirror_blocks.jinja  admin_supported_product_mirror_new.jinja  admin_supported_product_mirror_overrides.jinja  admin_supported_product_override_new.jinja  admin_supported_product_repomd.jinja  admin_supported_product_repomd_new.jinja  admin_supported_products.jinja  admin_user.jinja  admin_user_new.jinja  admin_users.jinja  admin_workflows.jinja  advisories.jinja  advisory.jinja  error.jinja  index.jinja  launch_icon.jinja  layout.jinja  light_icon.jinja  login.jinja  profile.jinja  red_hat_advisories.jinja  red_hat_advisory.jinja
apollo/server/templates/partials/: content_card.jinja  form_actions.jinja  header_meta.jinja  notification.jinja
apollo/tests/: BUILD.bazel  test_admin_routes_supported_products.py  test_api_keys.py  test_api_osv.py  test_api_updateinfo.py  test_auth.py  test_csaf_processing.py  test_database_service.py  test_db_config.py  test_rh_matcher_activities.py  test_rhcsaf.py  test_rpm_helpers.py  test_supported_products_logic.py  test_validation.py
apollo/tests/publishing_tools/: BUILD.bazel  test_apollo_tree.py
apollo/tests/publishing_tools/data/: appstream__base__repomd__aarch64.xml  appstream__base__repomd__x86_64.xml  baseos__base__repomd__aarch64.xml  baseos__base__repomd__x86_64.xml  baseos__base__repomd__x86_64_with_updateinfo.xml  updateinfo__test__1.xml
common/: BUILD.bazel  database.py  env.py  fastapi.py  info.py  logger.py  temporal.py
db/: schema.sql
deploy/apollo/apollo-rhworker/: Chart.yaml  values.yaml
deploy/apollo/apollo-rhworker/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
deploy/apollo/apollo-rpmworker/: Chart.yaml  values.yaml
deploy/apollo/apollo-rpmworker/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
deploy/apollo/apollo-server/: Chart.yaml  values.yaml
deploy/apollo/apollo-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  temporal.yaml  virtualservice.yaml
deploy/apollo/apollo-server/templates/tests/: test-connection.yaml
scripts/: generate_rocky_config.py
web/: mkdocs.yml
web/docs/: .pages  index.md
web/docs/apollo/: openapi.md
