load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "common_lib",
    srcs = [
        "database.py",
        "env.py",
        "fastapi.py",
        "info.py",
        "logger.py",
        "temporal.py",
        "testing.py",
    ],
    imports = [".."],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pypi_fastapi//:pkg",
        "@pypi_fastapi_pagination//:pkg",
        "@pypi_pydantic//:pkg",
        "@pypi_temporalio//:pkg",
        "@pypi_tortoise_orm//:pkg",
    ],
)
