load("@aspect_rules_py//py:defs.bzl", "py_library")

# gazelle:exclude example.py

py_library(
    name = "rherrata_lib",
    srcs = ["__init__.py"],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pypi_aiohttp//:pkg",
        "@pypi_dataclass_wizard//:pkg",
        "@pypi_yarl//:pkg",
    ],
)
