load("@aspect_rules_py//py:defs.bzl", "py_test")
load("@rules_python//python:defs.bzl", py_test_rules = "py_test")

py_test(
    name = "test_rpm_helpers",
    srcs = ["test_rpm_helpers.py"],
    deps = [
        "//apollo/rpm_helpers:rpm_helpers_lib",
    ],
)

py_test(
    name = "test_csaf_processing",
    srcs = ["test_csaf_processing.py", "test_db_config.py"],
    deps = [
        "//apollo/rhworker:rhworker_lib",
        "//apollo/db:db_lib",
        "//common:common_lib",  # Add common library dependency
    ],
)

py_test(
    name = "test_rhcsaf",
    srcs = ["test_rhcsaf.py"],
    deps = [
        "//apollo/rhcsaf:rhcsaf_lib",
        "//apollo/rpm_helpers:rpm_helpers_lib",
        "//common:common_lib",
    ],
)

py_test(
    name = "test_api_keys",
    srcs = ["test_api_keys.py"],
    deps = [
        "//apollo/server:server_lib",
    ],
)

py_test(
    name = "test_auth",
    srcs = ["test_auth.py"],
    deps = [
        "//apollo/server:server_lib",
    ],
)

py_test(
    name = "test_supported_products_logic",
    srcs = ["test_supported_products_logic.py"],
    deps = [
        "//common:common_lib",
    ],
)

py_test(
    name = "test_generate_rocky_config", 
    srcs = ["test_generate_rocky_config.py"],
    deps = [
        "//common:common_lib",
    ],
)