load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "serialize_lib",
    srcs = ["__init__.py"],
    imports = ["../../.."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//apollo/db:db_lib",
        "@pypi_pydantic//:pkg",
        "@pypi_tortoise_orm//:pkg",
    ],
)
